templates/tpl_modified/stylesheet.css
/* ... */
.lr_price .old_price {
  display:block;
  font-size:12px;
  line-height:18px;
  font-weight:normal;
  color:#777;
}
.lr_price .save_price {
  display:block;
  font-size:9px;
  font-weight:normal;
  line-height:15px;
}
.lr_price .item_price {
  display:block;
  font-size:12px;
  line-height:18px;
  font-weight:normal;
  color:#777;
}
.lr_price .uvp_price {
  display:block;
  font-size: 16px;
  line-height:20px;
  color:#434343;  
}
.lr_price .graduated_price {
  display:block;
  font-size: 16px;
  line-height:20px;
  color:#434343;
}
.lr_tax {
  text-align:right;
  padding: 0 0 0 0;
  font-size:10px;
  color:#999;
  line-height:18px;
}
.lr_tax a {
  color:#999;
  text-decoration:underline;
}
.lr_tax a:hover {
  color:#999;
  text-decoration:underline;
}
.lr_buttons {
  position:absolute;
  display:inline-block;
  right:0px;
  bottom:10px;
}
/* END productlist rows */


/* 21. START categories listing & subcats */
.cat_description {
  padding: 0px 0px 25px 0px; 
}
.cat_description ul {
  margin-left:15px;
}
.cat_description ol {
  margin-left:28px;
}
.cat_image {
  float:left;
  margin: 6px 25px 10px 0px;
  max-width:745px;
  position:relative;
}
.ci_nomargin {
  margin-right: 0px !important;
  max-width:755px;
}
.subcats {
  margin: 0 0 25px 0;
}
.subcatlist {
  float:left;
  width:139px;
  height:auto;
  margin: 0px 10px 10px 0px;
  border: 1px solid #ccc;
}
.subcatlist.last {
  margin: 0px 0px 10px 0px;
}  
.subcat_image {
  display:table;
  vertical-align:middle;
  text-align:center;
  width:139px;
  height:100px;
  overflow:hidden;
}
.subcat_image_inner {
  display:table-cell;
  vertical-align:middle;
  text-align:center;
}

.subcat_image img {
  max-width:139px;
  vertical-align:middle;
  height:auto;
  text-align:center;
}
.subcat_title {
  display:table;
  padding:5px 5px;
  color:#444;
  background:#f2f2f2;
  font-size:12px;
  height:38px;
  width:100%;
  line-height:14px;
  text-align:center;
  font-weight:bold;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.subcat_title_inner {
  display:table-cell;
  vertical-align:middle;
  text-align:center;
}
.subcat_desc {
  display:inline-block;
  padding:5px;
  font-size:12px;
  line-height:16px;
}
.subcatlist a {
  color:#444;
  display:block;
}
.subcatlist a:hover {
  text-decoration:none;
}
.subcatlist a:hover  .subcat_title {
  color:#6D2551 !important;
  text-decoration:none !important;
  background:#e6e6e6;
}
.manu_description {
  padding: 0px 0px 25px 0px; 
}
.manu_description ul {
  margin-left:15px;
}
.manu_description ol {
  margin-left:28px;
}
.manu_image {
  float:left;
  margin: 6px 25px 10px 0px;
  max-width:745px;
  position:relative;
}
.mi_nomargin {
  margin-right: 0px !important;
  max-width:755px;
}
/* END categories listing & subcats */



/* 22. START pagination */
.pagination_bar {
  padding: 0px 0px 0px 0px;
  margin: 15px 0 15px 0;
}
.pagination_text {
  float:left;
  display:inline-block;
  font-size:12px;
  line-height:22px;
  vertical-align:middle;
  color:#444;
}
.pagination_list {
  display:inline-block;
  float:right;
  font-size:12px;
  line-height:22px;
}
.pagination_list ul {
  list-style-type:none;
  margin: 0;
}
.pagination_list ul li {
  float:left;
  font-size: 11px;  
  line-height: 21px;
  text-align: center;
  padding: 0; 
}
.pagination_list ul li.plain {
  padding: 0 4px;
}
.pagination_list ul li a {
  display: inline-block;
  min-width:13px;
  padding: 0 4px;
  margin: 0 0 0 3px;
  color: #666; 
  text-decoration:none;
  background-color: #D7D7D7;
}
.pagination_list ul li a:hover {
  color: #fff; 
  background-color: #6D2551;
}
.pagination_list ul li.current {
  display: inline-block;
  min-width:13px;
  padding: 0 4px;
  margin: 0 0 0 3px;
  color: #fff; 
  font-weight:bold;
  background-color: #6D2551;
}
/* END pagination */


/* 23. START filter manufacturer */
.filter_bar {
  background-color: #f2f2f2;
  border: 1px solid #e6e6e6;
  margin-bottom: 15px;
  padding: 5px 5px;
}
.filter_bar .manufacturer_filter {
  float:left;
  width:200px;
}
/* END filter manufacturer */


/* 24. START content sites (AGB, Datenschutz, etc.) */
.content_site {

}
.content_site ul {
  margin-left:15px;
}
.content_site ol {
  margin-left:28px;
}
/* END content sites (AGB, Datenschutz, etc.) */


/* 25. START products_table for order_details, account_history_info, checkout_confirmation */
table.order_table {
  font-size:13px;
  line-height:19px;
  width:100%;
}
.ord_table_center {
  text-align:center;
}
.ord_table_left {
  text-align:left;
}
.ord_table_right {
  text-align:right;
}
.ord_width40 {
  width:40px;
}
.ord_width60 {
  width:60px;
}
.ord_width90 {
  width:90px;
}
.ord_width110 {
  width:110px;
}
.ord_width120 {
  width:120px;
}
.m_row1 {
  background:#fafafa;
}
.m_row2 {
  background:#ffffff;
}
.ord_quantity input {
  width:40px;
}
a.ord_prdoducts_name {
  color:#6d2551;
}
a.ord_prdoducts_name:hover {
  color:#555;
  text-decoration:none;
}
.markProductOutOfStock {
  display:inline-block;
  padding-left:5px;
}
table.order_table tr.headerrow {
  font-size:12px;
  line-height:18px;
  font-weight:bold;
  background:transparent; 
}
table.order_table tr.headerrow td {
  padding:5px 5px;
  vertical-align:top;
}
table.order_table tr.mainrow td {
  border-top: 1px solid #ddd;
  padding:10px 5px;
  vertical-align:top;
} 
.toppad {
  padding-top:16px !important;
}
table.order_table tr.mainrow td img.image {
  max-width: 60px;
  max-height:60px;
  margin: 0px auto;
  text-align:center;
}
table.order_table tr.mainrow td img.cartimage {
  max-width:80px;
  max-height:80px;
  margin: 0px auto;
  text-align:center;
}
table.order_table tr.mainrow td .description {
  font-size:12px !important;
  line-height:16px !important;
  margin-bottom:5px;
}
table.order_table tr.mainrow td .description p {
  margin: 0px !important;
  padding: 2px 0px !important;
}
table.order_table tr.mainrow td .description ul{
  margin: 8px 0px 8px 15px;
}
/* ... */

